<resources>
    <string name="app_name">TaskApplication</string>
    <string name="yes_i_want_">Yes ! i want to receive the latest travel\ndeals, offers and promotions</string>
    <string name="back_to_log">Back to !</string>
    <string name="log_in"> <b>Login</b></string>
    <string name="login_accou">Login Account</string>
    <string name="hello_welco">Hello , welcome back to our account !</string>
    <string name="forgot">Forgot Password?</string>
    <string name="or_sign_up_">Or sign up with</string>
    <string name="not_registe">Not register yet?</string>
    <string name="create_acc">Create Account</string>
</resources>