<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="@dimen/_20sdp"
                android:fontFamily="@font/opensansregular"
                android:text=""
                android:textColor="#041C32"
                android:textSize="@dimen/_14ssp" />

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:layout_margin="@dimen/_10sdp"
                android:src="@drawable/fincon">

            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/create_acco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/opensansbold"
                    android:gravity="top"
                    android:text="@string/login_accou"
                   android:textSize="20dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_5sdp"

                    app:tint="@color/black" />

            </LinearLayout>

            <TextView
                android:id="@+id/please_fill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/opensansregular"
                android:gravity="center"
                android:text="@string/hello_welco"


                android:textColor="#636363"
                android:textSize="13sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="Username*"
                android:maxLines="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:fontFamily="@font/opensansregular"
                    android:maxEms="1"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="Password*"
                android:maxLines="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
                    android:fontFamily="@font/opensansregular"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/forgot"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/opensansregular"
                android:text="@string/forgot"
                android:textSize="12sp"
                android:textColor="#6F6F6F" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@color/blue"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/white">

            </androidx.appcompat.widget.AppCompatButton>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:layout_weight="1"
                    android:background="#A39797" />

                <TextView
                    android:id="@+id/or_sign_up_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/or_sign_up_"
                    android:textSize="12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:layout_weight="1"
                    android:background="#A39797"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal">
                <!--            <com.google.android.gms.common.SignInButton-->
                <!--                android:layout_width="match_parent"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:id="@+id/sign_in_button"-->
                <!--                android:layout_margin="@dimen/_10sdp"-->
                <!--                android:background="">-->

                <!--            </com.google.android.gms.common.SignInButton>-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_5sdp"
                    android:fontFamily="@font/opensansregular"
                    android:text="@string/not_registe">

                </TextView>

                <TextView
                    android:id="@+id/create_account"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="@font/opensansregular"
                    android:gravity="center"
                    android:text="@string/create_acc"
                    android:textColor="#6F6F6F">

                </TextView>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>